Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
[Nov 25 2010] - Jamdog
  Added diagonal directions with cedit toggle (default to 'off')
  Bug-Fix: admin <player> default now targets the victim player
  Bug-Fix: Crash bug developed due to no 'vict' in is_tell_ok, added checks
  Added HIDDEN flag for doors, hiding from exits, autoexits, scan and map
[Nov 24 2010] - Jamdog
  Split mortal and admin levels (thanks fnord for original patch/idea)
  Mortal level converted to ubyte for 255 max
  Max mortal level now configurable in cedit
  Level on help files now indicates admin level
  Added 'set <player> admlevel <num>'
  Added admin command for imms
  Added mortal command, and modified return command to work for everyone
  Added admin level to player index (for autowiz)
  Added mortal flag to player index (for autowiz)
  Autowiz converted to work with new admin levels
  Socials are now admin-level dependant
  Added imm ability to 'score <player>'
  Minor Bug Fix: Cured problem where Imps didn't regain default flags when using 'return'
[Nov 06 2010] - Jamdog
  Added HappyHour feature
  Added game_info function for sending global messages to all players
  Added ability to change player/mob level or class in scripts 
  The medit mob flags menu now only shows valid flags (thanks Kyle)
  Skillset now warns imms when the player shouldn't have a skill (thanks Rumble)
  Fly spell added!
  Added recent command
  Bug Fix: Now imms show on who list when editing IBT notes.
[Nov 04 2010] - Jamdog
  Bug-Fix: Converted affect flags in struct affected_type from 32-bit to 128-bit
  Bug Fix: Players with too much gold now don't lose eq when renting
  Bug Fix: Cured SYSERR when selecting an unimplemented obj type in oedit (thanks Rumble)
  Bug Fix: Scan no longer shows the content of dark rooms (thanks Mirad)
  Removed conf.h fron the SVN, as this is created by the configure script
  Minor IBT system change for accurately finding who logged an IBT